# parameter-golf

./: .gitignore  DRAFT1.md  DRAFT2.md  DRAFT3.md  JOURNAL.md  PLAN.md  README.md  RULES.md  RUNPOD_READY.md  STRATEGY.md  autopilot.py  cache_text.py  modal_parameter_golf_h100.py  package_record.py  prepare_tokens.py  pyproject.toml  queue_runs.py  requirements.txt  run_official_mlx.py  sweep.py  train_gpt.py  train_gpt_mlx.py  train_tokenizer.py  validate_submission.py
candidates/: README.md
data/: sample_corpus.txt
queues/: d640_followups.json  d640_knob_queue.json
research-agent/: install_loop_launchd.sh  install_mac_proxy_frontier_launchd.sh  launchd_status.sh  loopctl.py  pyproject.toml  start_loop.sh  status_loop.sh  status_mac_proxy_frontier_launchd.sh  stop_loop.sh  uninstall_loop_launchd.sh  uninstall_mac_proxy_frontier_launchd.sh
research-experiments/: COLAB_VSCODE.md  JOURNAL.md  MAC_PROXY.md  README.md  REAL_EXPERIMENTS.md  colab_vscode_bootstrap.ipynb
runpod/: check_ready.py  collect_run_metadata.py  local_fetch_from_pod.sh  local_recover_existing_export.sh  local_recover_export_chain.sh  local_recover_export_chain_8gpu.sh  local_resume_existing_export.sh  local_sync_to_pod.sh  local_watch_latest.sh  pod_bootstrap.sh  pod_bootstrap_export_only.sh  pod_launch_export_chain.sh  pod_queue_export_after_prefix.sh  pod_queue_export_ladder.sh  pod_run.sh  pod_run_existing_export_ladder.sh
scripts/: README.md  after_baseline_proxy_queue_launch_swiglu.sh  after_baseline_record674_launch_podracing674_then_swiglu.sh  after_conf07_run_budget_proxy_conf07.sh  (+225 more)
(+68 files in other folders)
